WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136157
Fix iOS build due to
r172832
and move RUBBER_BANDING out of FeatureDefines.h
https://bugs.webkit.org/show_bug.cgi?id=136157
Summary
Fix iOS build due to r172832 and move RUBBER_BANDING out of FeatureDefines.h
Jon Lee
Reported
2014-08-22 09:13:19 PDT
Fix iOS build due to
r172832
and move RUBBER_BANDING out of FeatureDefines.h
Attachments
Patch
(31.96 KB, patch)
2014-08-22 09:57 PDT
,
Jon Lee
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Lee
Comment 1
2014-08-22 09:57:51 PDT
Created
attachment 236987
[details]
Patch
Jon Lee
Comment 2
2014-08-22 10:56:24 PDT
Committed
r172860
: <
http://trac.webkit.org/changeset/172860
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug