Fix iOS build due to r172832 and move RUBBER_BANDING out of FeatureDefines.h https://bugs.webkit.org/show_bug.cgi?id=136157

Reviewed by Simon Fraser.

Source/JavaScriptCore:

* Configurations/FeatureDefines.xcconfig: Add ENABLE(RUBBER_BANDING).

Source/WebCore:

* Configurations/FeatureDefines.xcconfig: Add ENABLE(RUBBER_BANDING).

Source/WebKit/mac:

* Configurations/FeatureDefines.xcconfig: Add ENABLE(RUBBER_BANDING).
* WebView/WebView.mm:
(-[WebView _preferencesChanged:]): Wrap in ENABLE(RUBBER_BANDING).

Source/WebKit2:

* Configurations/FeatureDefines.xcconfig: Add ENABLE(RUBBER_BANDING).

Source/WTF:

* wtf/FeatureDefines.h: Remove ENABLE(RUBBER_BANDING) logic for Mac platform.

Canonical link: https://commits.webkit.org/153992@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172860 268f45cc-cd09-0410-ab3c-d52691b4dbfc